--- a/templates/apropos.html.twig
+++ b/templates/apropos.html.twig
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1>A notre sujet</h1>
-    <p>A-propos de Symfony_Project</p>  
+    <p>A propos de Symfony_Project</p>  
 </body>
 </html>
