--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -1,18 +1,11 @@
-{# templates/accueil.html.twig #}
 
-<!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mon Site Symfony</title>
-       
-        
-    </head>
-<body>
+{% extends 'base.html.twig' %}
 
+{% block title %}Accueil{% endblock %}
+
+{% block body %}
+<div class="example-wrapper">
     <h1>Vous êtes sur la page d'accueil</h1>
-    <p>Bienvenue sur Symfony_Project</p>
-    
-</body>
-</html>
+    <p>Bienvenue sur symfony_project</p>
+</div>
+{% endblock %}
