--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -4,7 +4,7 @@
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
-<div class="example-wrapper">
+<div class="accueil">
     <h1>Vous êtes sur la page d'accueil</h1>
     <p>Bienvenue sur symfony_project</p>
 </div>
