--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -4,7 +4,7 @@
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
-<div class="example-wrapper">
+<div class="contact">
     <h1>Contactez-nous</h1>
     <p>Voulez-vous nous contacter ? symfony@project.com</p>
 </div>
