--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,10 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
         {% block stylesheets %}
         {% endblock %}
 
@@ -35,5 +39,25 @@
             <div class="container mp-4">
         {% block body %}{% endblock %}
             </div>
-    </body>
+              
+            </div>
+    
+    <footer>
+    <div class="footer">
+        <p>&#169; {{ "now"|date("m/d/y H:i", "Europe/Paris") }} Symfony Project -  Tous droits réservés à Mr Scrupulus </p>
+        <ul>
+            <li><a href="{{ path('accueil') }}">Accueil</a></li>
+            <li><a href="{{ path('contact') }}">Contact</a></li>
+            <li><a href="{{ path('apropos') }}">A propos</a></li>
+            <li>Vous voulez savoir l'heure, elle est notée juste au dessus</a></li>
+            <li><a href="#">Fait-il beau aujourd'hui ?</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Politique de confidentialité</a></li>
+            <li><a href="#">A quoi sert ce site ?</a></li>
+            <li><a href="#">A quoi sert une saucisse ?</a></li>
+            <li><a href="#">Accesibilité</a></li>
+        </ul>
+    </div>
+    </footer>
+</body>
 </html>
