--- a/templates/apropos.html.twig
+++ b/templates/apropos.html.twig
@@ -19,7 +19,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="card">
-                    <img class="imgfiche" src="#" alt="Image de Personne 1">
+                    <img class="imgfiche" src="#" alt="Image de Perrine">
                     <div class="fiche">
                         <h5 class="prenom">Perrine</h5>
                         <p class="titre">Petite diablesse de la programmation</p>
@@ -29,7 +29,7 @@
             </div>
             <div class="carousel-item">
                 <div class="card">
-                    <img class="imgfiche" src="#" alt="Image de Personne 2">
+                    <img class="imgfiche" src="#" alt="Image de Adrien">
                     <div class="fiche">
                         <h5 class="prenom">Adrien</h5>
                         <p class="titre">Petit italien de la programmation</p>
@@ -39,7 +39,7 @@
             </div>
             <div class="carousel-item">
                 <div class="card">
-                    <img class="imgfiche" src="#" alt="Image de Personne 3">
+                    <img class="imgfiche" src="#" alt="Image de Fred">
                     <div class="fiche">
                         <h5 class="prenom">Fred</h5>
                         <p class="titre">Grand marabou de la programmation</p>  
@@ -48,9 +48,7 @@
                 </div>
             </div>
         </div>
-
-    </div>   
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
@@ -58,6 +56,10 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
+    </div>   
+        
+        
+        
     
 </div>
 {% endblock %}
