--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10,6 +10,14 @@ footer {
 .nav-link {
   color: chartreuse;
 }
-button {
-  display: none;
+/* .carousel-control-prev-icon .carousel-control-next-icon {
+  color: chartreuse;
+  background-color: chartreuse;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 10;} */
+
+button:hover {
+  background-color: #0057b334;
+  color: #ffffff;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3); /* Ombre plus prononcée au survol */
 }
