--- a/templates/apropos.html.twig
+++ b/templates/apropos.html.twig
@@ -3,7 +3,7 @@
 {% block title %}A propos{% endblock %}
 
 {% block body %}
-<div class="apropos">
+<main class="apropos">
     <h1>A propos de nous</h1>
     <p>Que voulez-vous savoir sur symfony_project ?</p>
 
@@ -61,6 +61,6 @@
         
         
     
-</div>
+</main>
 {% endblock %}
 
